<resources>
    <string name="app_name">People</string>
    <string name="action_settings">Settings</string>

    <string name="button_add_contact">Новый контакт</string>
    <string name="button_save_contact">Зберегти</string>

    <string name="title_call">Зателефонувати</string>
    <string name="title_delete">Видалити</string>
    <string name="title_edit">Редагувати</string>
    <string name="title_save">Зберегти</string>

    <string name="menu_add">Додати контакт</string>
    <string name="menu_about">Про програму</string>

    <string name="hint_name">Ім′я</string>
    <string name="hint_surname">Прізвище</string>
    <string name="hint_phone">Телефон</string>
    <string name="hint_birthday">День народження</string>
    <string name="hint_note">Нотатки</string>

    <string name="label_name">Ім′я</string>
    <string name="label_surname">Прізвище</string>
    <string name="label_phone">Телефон</string>
    <string name="label_birthday">День народження</string>
    <string name="label_note">Нотатки</string>

    <string name="confirmTitle">Видалити контакт?</string>
    <string name="confirmMessage">Цей контакт буде видалено</string>

    <string name="errorButton">Оk</string>
    <string name="errorTitle">Необхідне ім′я контакту</string>
    <string name="errorMessage">Ви повинні ввести ім′я</string>

    <string name="errorButtonPhone">Оk</string>
    <string name="errorTitlePhone">Помилка</string>
    <string name="errorMessagePhone">Номер містить недопустимі символи</string>

    <string name="button_cancel">Ні</string>
    <string name="button_delete">Так</string>

    <string name="title_add_tullbar">People</string>

</resources>
