<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.EditActivity"
    tools:showIn="@layout/activity_edit">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp">

            <EditText
                android:id="@+id/nameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:textColorHint="@color/colorTextHint"
                android:hint="@string/hint_name"
                android:inputType="textPersonName|textCapWords"
                android:layout_margin="@dimen/activity_margin"
                android:background="@drawable/edit_text"/>

            <EditText
                android:id="@+id/surnameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:textColorHint="@color/colorTextHint"
                android:hint="@string/hint_surname"
                android:inputType="textPersonName|textCapWords"
                android:layout_margin="@dimen/activity_margin"
                android:background="@drawable/edit_text"/>

            <EditText
                android:id="@+id/phoneEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:textColorHint="@color/colorTextHint"
                android:hint="@string/hint_phone"
                android:inputType="phone"
                android:layout_margin="@dimen/activity_margin"
                android:background="@drawable/edit_text"/>

            <EditText
                android:id="@+id/birthdayEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:textColorHint="@color/colorTextHint"
                android:hint="@string/hint_birthday"
                android:inputType="textCapWords"
                android:layout_margin="@dimen/activity_margin"
                android:background="@drawable/edit_text"/>

            <EditText
                android:id="@+id/noteEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:imeOptions="actionDone"
                android:hint="@string/hint_note"
                android:textColorHint="@color/colorTextHint"
                android:inputType="text|textMultiLine"
                android:layout_margin="@dimen/activity_margin"
                android:scrollbars="vertical"
                android:maxLines="10"
                android:background="@drawable/edit_text" />

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>