<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.InfoActivity"
    tools:showIn="@layout/activity_info">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="30dp"
            android:stretchColumns="1">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/nameLabelTextView"
                    android:layout_margin="@dimen/activity_margin"
                    android:text="@string/label_name"
                    android:textSize="@dimen/text_in_content_edit"/>

                <TextView
                    android:id="@+id/nameTextView"
                    android:layout_margin="@dimen/activity_margin"
                    android:textSize="@dimen/text_in_content_edit"/>

            </TableRow>

            <TableRow
                android:id="@+id/surnameTableRow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/surnameLabelTextView"
                    android:layout_margin="@dimen/activity_margin"
                    android:text="@string/label_surname"
                    android:textSize="@dimen/text_in_content_edit"/>

                <TextView
                    android:id="@+id/surnameTextView"
                    android:layout_margin="@dimen/activity_margin"
                    android:textSize="@dimen/text_in_content_edit"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/phonelLabelTextView"
                    android:layout_margin="@dimen/activity_margin"
                    android:text="@string/label_phone"
                    android:textSize="@dimen/text_in_content_edit"/>

                <TextView
                    android:id="@+id/phoneTextView"
                    android:layout_margin="@dimen/activity_margin"
                    android:textSize="@dimen/text_in_content_edit"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/birthdayLabelTextView"
                    android:layout_margin="@dimen/activity_margin"
                    android:text="@string/label_birthday"
                    android:textSize="@dimen/text_in_content_edit"/>

                <TextView
                    android:id="@+id/birthdayTextView"
                    android:layout_margin="@dimen/activity_margin"
                    android:textSize="@dimen/text_in_content_edit"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/noteLabelTextView"
                    android:layout_margin="@dimen/activity_margin"
                    android:text="@string/label_note"
                    android:textSize="@dimen/text_in_content_edit"/>

            </TableRow>

        </TableLayout>

        <TextView
            android:id="@+id/noteTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:textSize="@dimen/text_in_content_edit"/>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>